# the-cool-ai-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bentofile.yaml  pyproject.toml
.github/workflow/: build_model_image_and_push_to_ecr.yaml
.github/workflows/: 0_prepare_ecr.yml  1_build_model_image_and_push_to_ecr.yaml  2_deploy_infra.yml  build_model_image_and_push_to_ecr.yaml  jobs.yml
infra/: ecr.tf  ecs.tf  main.tf  variables.tf  vpc.tf
src/: save_model.py  service.py
